log
vi., 22 de abr. de 2022 11:21:42: 
 tests:  1|8
total_score: 0/70
622a9fa
vi., 22 de abr. de 2022 11:22:06: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
08958fd
vi., 22 de abr. de 2022 11:28:05: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(tree->current->pair->key, key) == 0){
             ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b92e25e
vi., 22 de abr. de 2022 11:28:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
37cc514
vi., 22 de abr. de 2022 11:29:53: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|7
total_score: 5/70
8c1d40b
vi., 22 de abr. de 2022 11:30:27: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(tree->current->pair->key, key)){
             ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
13ce8e7
vi., 22 de abr. de 2022 11:30:46: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:13: error: too few arguments to function 'is_equal'
         if (is_equal(tree->current->pair->key, key)){
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
ba5e43d
vi., 22 de abr. de 2022 11:31:05: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
9e098b2
vi., 22 de abr. de 2022 11:34:09: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
09f08b9
vi., 22 de abr. de 2022 11:36:08: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b5aaf9c
vi., 22 de abr. de 2022 11:41:25: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
aafec44
vi., 22 de abr. de 2022 11:42:38: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
6b4c95d
vi., 22 de abr. de 2022 11:42:57: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
10a6c46
vi., 22 de abr. de 2022 11:50:10: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
41693aa
vi., 22 de abr. de 2022 11:53:16: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
a2fd250
vi., 22 de abr. de 2022 11:57:26: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
683767a
vi., 22 de abr. de 2022 12:03:04: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
b01fade
vi., 22 de abr. de 2022 12:07:00: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 15/70
007ea3a
vi., 22 de abr. de 2022 12:07:26: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
f9d2930
vi., 22 de abr. de 2022 23:36:27: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:80:35: error: comparison between pointer and integer [-Werror]
     if (node->left == node->right == NULL){
                                   ^~
treemap.c:80:20: error: suggest parentheses around comparison in operand of '==' [-Werror=parentheses]
     if (node->left == node->right == NULL){
         ~~~~~~~~~~~^~~~~~~~~~~~~~
treemap.c:82:33: error: statement with no effect [-Werror=unused-value]
             node->parent->right == NULL;
                                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2014ed8
vi., 22 de abr. de 2022 23:37:43: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
4e319f4
vi., 22 de abr. de 2022 23:43:49: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  16|4
total_score: 30/70
ac13ae7
vi., 22 de abr. de 2022 23:50:26: 
 treemap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  16|4
total_score: 30/70
b83866f
vi., 22 de abr. de 2022 23:53:20: 
 treemap.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  16|4
total_score: 30/70
b6e7f6e
vi., 22 de abr. de 2022 23:57:19: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
480e3c7
sá., 23 de abr. de 2022  0:13:00: 
 treemap.c | 29 +++++++++++++++++------------
 1 file changed, 17 insertions(+), 12 deletions(-)
 tests:  0|0
63554f2
sá., 23 de abr. de 2022  0:18:15: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9e543e
sá., 23 de abr. de 2022  0:20:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff1462c
sá., 23 de abr. de 2022  0:21:56: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4fb0bb6
sá., 23 de abr. de 2022  0:25:04: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
dc35984
sá., 23 de abr. de 2022  0:33:05: 
 treemap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:98:19: error: comparison of constant '-1' with boolean expression is always false [-Werror=bool-compare]
         if (!hijo == -1) node->right->parent = node->parent;
                   ^~
treemap.c:98:19: error: logical not is only applied to the left hand side of comparison [-Werror=logical-not-parentheses]
treemap.c:102:19: error: comparison of constant '-1' with boolean expression is always false [-Werror=bool-compare]
         if (!hijo == -1) node->left->parent = node->parent;
                   ^~
treemap.c:102:19: error: logical not is only applied to the left hand side of comparison [-Werror=logical-not-parentheses]
treemap.c:109:19: error: comparison of constant '-1' with boolean expression is always false [-Werror=bool-compare]
         if (!hijo == -1){
                   ^~
treemap.c:109:19: error: logical not is only applied to the left hand side of comparison [-Werror=logical-not-parentheses]
cc1.exe: all warnings being treated as errors
Compilation failed
38223fa
sá., 23 de abr. de 2022  0:33:48: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:109:20: error: comparison of constant '-1' with boolean expression is always false [-Werror=bool-compare]
         if ((!hijo == -1)){
                    ^~
treemap.c:109:20: error: logical not is only applied to the left hand side of comparison [-Werror=logical-not-parentheses]
cc1.exe: all warnings being treated as errors
Compilation failed
d9655d7
sá., 23 de abr. de 2022  0:34:23: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:109:20: error: comparison of constant '2' with boolean expression is always false [-Werror=bool-compare]
         if ((!hijo == 2)){
                    ^~
treemap.c:109:20: error: logical not is only applied to the left hand side of comparison [-Werror=logical-not-parentheses]
cc1.exe: all warnings being treated as errors
Compilation failed
215fad9
sá., 23 de abr. de 2022  0:35:03: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 35/70
b5b1f29
sá., 23 de abr. de 2022  0:38:05: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
0f54708
sá., 23 de abr. de 2022  0:39:41: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  18|3
total_score: 40/70
047daa2
sá., 23 de abr. de 2022  0:40:48: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  15|4
total_score: 25/70
e392d0f
sá., 23 de abr. de 2022  0:41:57: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  18|3
total_score: 40/70
175a65b
sá., 23 de abr. de 2022  0:43:07: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
cee2566
